# SogasEngine

./: .gitignore  .gitmodules  README.md  clean.sh
.github/workflows/: format.yml  windows.yml
Sogas/: .clang-format  CMakeLists.txt
Sogas/Engine/: CMakeLists.txt
Sogas/Engine/data/: boot.json  components.json  modules.json
Sogas/Engine/data/scenes/: scene.json
Sogas/Engine/data/shaders/: forward.frag  forward.vert  triangle.frag  triangle.vert  wireframe.frag  wireframe.vert
Sogas/Engine/include/components/: base_component.h  entity.h
Sogas/Engine/include/components/basic/: camera_component.h  name_component.h  pau_component.h  point_light_component.h  render_component.h  transform_component.h
Sogas/Engine/include/components/controllers/: flyover_camera_controller.h
Sogas/Engine/include/engine/: camera.h  clock.h  defines.h  engine.h  geometry.h  handle.h  logger.h  math.h  primitives.h  scene.h  smemory.h  transform.h
Sogas/Engine/include/entity/: entity.h  entity_parser.h
Sogas/Engine/include/handle/: handle.h  handle_manager.h  object_manager.h
Sogas/Engine/include/input/: button.h  keyboard.h  mouse.h  windows_keyboard_interface.h
Sogas/Engine/include/input/devices/: windows_mouse_interface.h
Sogas/Engine/include/modules/: module.h  module_boot.h  module_entities.h  module_input.h  module_manager.h  module_renderer.h  render_manager.h
Sogas/Engine/include/platform/: platform.h
Sogas/Engine/include/resources/: json_helper.h  mesh.h
Sogas/Engine/src/: pch.hpp
Sogas/Engine/src/components/: entity.cpp
Sogas/Engine/src/components/basic/: camera_component.cpp  name_component.cpp  pau_component.cpp  point_light_component.cpp  render_component.cpp  transform_component.cpp
Sogas/Engine/src/components/controllers/: flyover_camera_controller.cpp
Sogas/Engine/src/engine/: camera.cpp  clock.cpp  engine.cpp  geometry.cpp  handle_manager.h  logger.cpp  math.cpp  primitives.cpp  scene.cpp  smemory.cpp  transform.cpp
Sogas/Engine/src/entity/: entity.cpp  entity_parser.cpp
Sogas/Engine/src/handle/: handle.cpp  handle_manager.cpp
Sogas/Engine/src/input/: windows_keyboard_interface.cpp
Sogas/Engine/src/input/devices/: windows_keyboard_interface.cpp  windows_mouse_interface.cpp
Sogas/Engine/src/modules/: module_boot.cpp  module_entities.cpp  module_input.cpp  module_manager.cpp  module_renderer.cpp  render_manager.cpp
Sogas/Engine/src/platform/: platform.cpp
Sogas/Engine/src/resources/: json_helper.cpp  mesh.cpp
Sogas/EngineTest/: CMakeLists.txt  pch.h
Sogas/EngineTest/EngineTest/platform/: platform_test.cpp
Sogas/EngineTest/src/: pch.h
Sogas/EngineTest/src/platform/: platform_test.cpp
Sogas/Logger/: CMakeLists.txt
Sogas/Logger/include/: defines.h  logger.h
Sogas/Logger/src/: logger.cpp
Sogas/Pinut/: CMakeLists.txt
Sogas/Pinut/include/: defines.h  logger.h  render_device.h  render_types.h
Sogas/Pinut/include/resources/: buffer.h  commandbuffer.h  pipeline.h  renderpass.h  resource_pool.h  resources.h  shader_state.h  texture.h
Sogas/Pinut/include/vulkan/: vulkan_debug.h  vulkan_device.h  vulkan_imgui.h  vulkan_pipeline_builder.h  vulkan_shader_loader.h
Sogas/Pinut/include/vulkan/utils/: vulkan_commandbuffer.h  vulkan_initializers.h  vulkan_pipeline_builder.h  vulkan_render_pass.h  vulkan_shader_loader.h  vulkan_swapchain.h  vulkan_swapchain_builder.h  vulkan_utils.h
Sogas/Pinut/src/: pch.hpp  render_device.cpp
Sogas/Pinut/src/resources/: resource_pool.cpp
Sogas/Pinut/src/vulkan/: vulkan_device.cpp  vulkan_imgui.cpp  vulkan_pipeline_builder.cpp  vulkan_shader_loader.cpp
Sogas/Pinut/src/vulkan/utils/: vulkan_commandbuffer.cpp  vulkan_initializers.cpp  vulkan_pipeline_builder.cpp  vulkan_render_pass.cpp  vulkan_shader_loader.cpp  vulkan_swapchain.cpp  vulkan_swapchain_builder.cpp  vulkan_utils.cpp
Sogas/Sandbox/: CMakeLists.txt  imgui.ini
Sogas/Sandbox/src/: main.cpp
scripts/: clean.sh  create_build.sh  format.sh
